--- a/MavenEnterpriseApp-web/pom.xml
+++ b/MavenEnterpriseApp-web/pom.xml
@@ -20,8 +20,8 @@
 	<description>Maven Enterprise Project</description>
 
 	<organization>
-		<name>Landmark Technologies</name>
-		<url>http://mylandmarktech.com/</url>
+		<name>Devops Xpress</name>
+		<url>http://DevopsXpress.com/</url>
 	</organization>
 
 	<properties>
@@ -95,12 +95,12 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <name>Devops Xpress Releases Nexus Repository</name>
 	      <url>http://localhost:8085/landmarktechnologies/repository/flipkart-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>Mithun Devops Xpress Snapshot Nexus Repository </name>
 	      <url>http://localhost:8085/landmarktechnologies/repository/flipkart-snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
